--- a/frontend/src/screens/services/ServicesStyles.scss
+++ b/frontend/src/screens/services/ServicesStyles.scss
@@ -354,7 +354,7 @@
 
     .button-container {
       margin-bottom: 10vh;
-      margin-top: -11.5vh;
+      margin-top: 1.5rem;
     }
 
     .bottom-container {
@@ -384,6 +384,7 @@
           line-height: 29px;
           text-align: justify;
           margin-top: 20px;
+          margin-bottom: 1rem;
         }
       }
 
@@ -781,6 +782,7 @@
                 font-size: 15px;
                 line-height: 30px;
                 margin-top: 0px;
+                margin-bottom: 1rem;
               }
             }
 
@@ -797,8 +799,12 @@
             margin-left: 0;
             display: flex;
             justify-content: center;
-            margin-top: 1rem;
+            margin-top: 1.5rem;
             padding-bottom: 0px;
+          }
+          
+          #reviews_btn_1 {
+            margin-top: 1.5rem;
           }
         }
 
@@ -1198,6 +1204,10 @@
                 text-align: start;
                 margin-top: 41px;
               }
+              
+              .sub-content-two {
+                margin-bottom: 1rem;
+              }
             }
 
             .bottom-right-container {
@@ -1206,13 +1216,13 @@
           }
 
           .button-container {
-            margin-top: -8vh;
+            margin-top: 1.5rem;
             margin-left: 0;
           }
 
           #reviews_btn_1 {
             display: block;
-            margin-top: 3vh;
+            margin-top: 1.5rem;
           }
 
           #reviews_btn_2 {
@@ -1739,7 +1749,7 @@
       .button-container {
         margin-left: 20px;
         margin-bottom: 5%;
-        margin-top: -22%;
+        margin-top: 1.5rem;
       }
 
       .bottom-container {
@@ -1758,6 +1768,7 @@
           .sub-content-two {
             font-size: 30px;
             line-height: 45px;
+            margin-bottom: 1rem;
           }
         }
 
